--- a/bsn/src/main/resources/application-dev.yml
+++ b/bsn/src/main/resources/application-dev.yml
@@ -29,3 +29,9 @@ spring:
         connectiontimeout: 5000
         timeout: 3000
         writetimeout: 5000
+
+application:
+  security:
+    jwt:
+      secret-key: 7C9E761FB516CEDF6AACEE19FF2B3D3A
+      expiration: 86400000
